plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.6'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'ee.maitsetuur'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('testcontainersVersion', "1.17.6")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation group: 'com.google.zxing', name: 'core', version: '3.3.1'
    implementation group: 'com.google.zxing', name: 'javase', version: '3.5.1'
    implementation group: 'org.freemarker', name: 'freemarker', version: '2.3.32'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '3.0.1'
    implementation 'com.influxdb:influxdb-client-java:6.7.0'
    testImplementation 'ch.qos.logback:logback-classic:1.4.6'
    implementation group: 'com.auth0', name: 'java-jwt', version: '4.2.2'
    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
    implementation 'org.flywaydb:flyway-core:9.17.0'
    implementation 'org.flywaydb:flyway-mysql:9.17.0'
    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
    implementation 'com.google.code.gson:gson:2.10.1'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.2'
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:mysql'
    testImplementation 'com.h2database:h2:2.1.214'
    testImplementation 'org.projectlombok:lombok:1.18.22'
    testImplementation 'org.testng:testng:7.7.0'
}

dependencyManagement {
    imports {
        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
    }
}

bootRun {
    if (project.hasProperty('debug')) {
        jvmArgs(['-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=0.0.0.0:5005'])
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
